@@ -31,20 +31,26 @@ public class SaleService {
         this.saleMapper = saleMapper;
     }
 
+    /**
+     * US2 – Visualizza sale disponibili in una data e fascia oraria.
+     */
     @Transactional(readOnly = true)
-    public List<SaleDTO> findAllFreeSales(LocalDate data, LocalTime inizio, LocalTime fine) {
-        LOG.debug("US2 - Ricerca sale libere");
-        return saleRepository.findFreeSales(data, inizio, fine).stream().map(saleMapper::toDto).collect(Collectors.toList());
+    public List<SaleDTO> findAllFreeSales(LocalDate data, LocalTime inizio, LocalTime fine, Integer capienza) {
+        LOG.debug("Request to get free sales for {} from {} to {}", data, inizio, fine, capienza);
+
+        return saleRepository.findFreeSales(data, inizio, fine, capienza).stream().map(saleMapper::toDto).toList();
     }
 
     public SaleDTO save(SaleDTO saleDTO) {
         Sale sale = saleMapper.toEntity(saleDTO);
-        return saleMapper.toDto(saleRepository.save(sale));
+        sale = saleRepository.save(sale);
+        return saleMapper.toDto(sale);
     }
 
     public SaleDTO update(SaleDTO saleDTO) {
         Sale sale = saleMapper.toEntity(saleDTO);
-        return saleMapper.toDto(saleRepository.save(sale));
+        sale = saleRepository.save(sale);
+        return saleMapper.toDto(sale);
     }
 
     @Transactional(readOnly = true)
@@ -52,12 +58,12 @@ public class SaleService {
         return saleRepository.findAll(pageable).map(saleMapper::toDto);
     }
 
+    public void delete(UUID id) {
+        saleRepository.deleteById(id);
+    }
+
     @Transactional(readOnly = true)
     public Optional<SaleDTO> findOne(UUID id) {
         return saleRepository.findById(id).map(saleMapper::toDto);
-    }
-
-    public void delete(UUID id) {
-        saleRepository.deleteById(id);
     }
 }
